; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/apr-util/test/extr_testbuckets.c_make_simple_brigade.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/apr-util/test/extr_testbuckets.c_make_simple_brigade.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@p = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*, i8*)* @make_simple_brigade to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @make_simple_brigade(i32* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i32, i32* @p, align 4
  %10 = load i32*, i32** %4, align 8
  %11 = call i32* @apr_brigade_create(i32 %9, i32* %10)
  store i32* %11, i32** %7, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @strlen(i8* %13)
  %15 = load i32*, i32** %4, align 8
  %16 = call i32* @apr_bucket_transient_create(i8* %12, i32 %14, i32* %15)
  store i32* %16, i32** %8, align 8
  %17 = load i32*, i32** %7, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = call i32 @APR_BRIGADE_INSERT_TAIL(i32* %17, i32* %18)
  %20 = load i8*, i8** %6, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = call i32 @strlen(i8* %21)
  %23 = load i32*, i32** %4, align 8
  %24 = call i32* @apr_bucket_transient_create(i8* %20, i32 %22, i32* %23)
  store i32* %24, i32** %8, align 8
  %25 = load i32*, i32** %7, align 8
  %26 = load i32*, i32** %8, align 8
  %27 = call i32 @APR_BRIGADE_INSERT_TAIL(i32* %25, i32* %26)
  %28 = load i32*, i32** %7, align 8
  ret i32* %28
}

declare dso_local i32* @apr_brigade_create(i32, i32*) #1

declare dso_local i32* @apr_bucket_transient_create(i8*, i32, i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @APR_BRIGADE_INSERT_TAIL(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
